This file summarizes the major and interesting changes for each release.
For a detailed list of changes, please see ChangeLog.

0.27 (UNRELEASED)

 * Enhancements:

 * Bug fixes:

0.26 (2013-08-11)

 * Enhancements:

 * Bug fixes:
   - Folder text entry now activates OK button (thanks jdstrand!)
   - Tree now sorts folders before directories (thanks jdstrand!)
   - Fixed typeahead find (thanks hallyn!)

0.25 (2013-08-09)

 * Enhancements:
   - Added tree support (Thanks to Jabik Postmus!)
   - Improved test suite
   - Updated translations

 * Bug fixes:
   - Fixed some untranslated strings (LP: #1202980)

0.24 (2013-03-06)

 * Enhancements:
   - Updated translations

 * Bug fixes:
   - Fix pylint warnings and test suite
   - Removed deprecated GObject usage

0.23 (2013-02-12)

 * Enhancements:

 * Bug fixes:
   - Fixed adding new entries

0.22 (2013-02-09)

 * Enhancements:
   - Updated translations

 * Bug fixes:
   - Command line tools can now be run without a GUI

0.21 (2012-08-21)

 * Enhancements:
   - Pasaffe now remembers window sizes

 * Bug fixes:

0.20 (2012-08-14):

 * Enhancements:
   - Made password length configurable (Thanks to Mathieu Trudel-Lapierre!)
   - Automatically clears clipboard after 20 seconds

 * Bug fixes:
   - Moved gsettings schema from apps.pasaffe to net.launchpad.pasaffe

0.19 (2012-05-17):

 * Enhancements:

 * Bug fixes:
   - Fix do-release script to remove backup files before creating release
     tarball.

0.18 (2012-05-17):

 * Enhancements:
   - Can now import KeePass2 XML files
     (Thanks to Mathieu Trudel-Lapierre!)
   - Disable Launchpad integration (no longer supported)

 * Bug fixes:

0.17 (2012-05-03):

 * Enhancements:
   - Add command-line option to specify default database

 * Bug fixes:
   - Don't save database specified on command line as default
   - Properly handle entries that have no URL specified (LP: #980608)
   - Fix logging in pasaffe-import scripts so we can debug failures
     (LP: #991143)